--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 <script>
+	var dem = 0;
   var OneSignal = window.OneSignal || [];
   OneSignal.push(function() {
     OneSignal.init({
       appId: "1f53eaa8-deab-4f8e-801c-8f217b8c2ecd",
     });
+	dem++;
+		document.getElementById("display").innerHTML = dem;
   });
-	var dem = 0;
 	Notification.onshow = function() { 
 		dem++;
 		document.getElementById("display").innerHTML = dem;
